--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.html
@@ -47,6 +47,8 @@
           [wrAnlassLink]="wrAnlassLink"
           [wertungsrichter]="wertungsrichterUser"
           [einsatz]="getEinsatzForSlot(slot)"
+          [anlass]="anlass"
+          (wrEinsatzChange)="wrEinsatzChange($event)"
         >
         </app-wertungsrichter-slot>
         <mat-form-field
