--- a/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
+++ b/anmeldetool-web/src/main/web/src/app/nav/nav-bar/nav-bar.component.html
@@ -1,10 +1,5 @@
 <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <!--div class="container-fluid"-->
-  <!--div class="navbar-header"-->
-  <a class="navbar-brand">Ressort GETU</a>
-  <!--/div-->
-
   <div class="collapse navbar-collapse show" id="navbarCollapse">
     <ul class="nav navbar-nav">
       <li class="nav-item active">
@@ -13,10 +8,10 @@
           class="nav-link"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
-          >All Events <span class="sr-only">(current)</span></a
+          >Alle Anlässe<span class="sr-only">(current)</span></a
         >
       </li>
-      <li class="nav-item">
+      <!--li class="nav-item">
         <a
           [routerLink]="['/anlass/new']"
           routerLinkActive="active"
@@ -33,18 +28,28 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
-          Anlaesse
+          Anlässe
         </a>
-        <!--div *ngFor="let event of events | async" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">{{event.name}}</a>
-                </div-->
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <!--a *ngFor="let anlass of anlaesse | async" class="dropdown-item" href="#">{{anlass.anlassBezeichnung}}</a-->
-          <!--a *ngFor="let anlass of anlaesse | async" href="#">{{anlass.anlassBezeichnung}}</a-->
+
+        <div
+          *ngFor="let event of events | async"
+          class="dropdown-menu"
+          aria-labelledby="navbarDropdownMenuLink"
+        >
+          <a class="dropdown-item" href="#">{{ event.name }}</a>
         </div>
-      </li>
+
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a
+            *ngFor="let anlass of anlaesse | async"
+            class="dropdown-item"
+            href="#"
+            >{{ anlass.anlassBezeichnung }}</a
+          >
+        </div>
+      </li-->
     </ul>
-    <form class="nav navbar-nav form-inline" id="searchForm">
+    <!--form class="nav navbar-nav form-inline" id="searchForm">
       <input
         class="form-control mr-sm-2"
         type="search"
@@ -54,7 +59,7 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
         Search
       </button>
-    </form>
+    </form-->
     <div class="navbar-header navbar-right">
       <ul class="nav navbar-nav">
         <li>
@@ -77,5 +82,8 @@
       </ul>
     </div>
   </div>
-  <!--/div-->
+  <a class="navbar-brand">
+    Ressort GETU
+    <img brand src="assets/images/ZTV_Logo_CMYK_freigestellt.png" height="36" />
+  </a>
 </nav>
