--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-slot/wertungsrichter-slot.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-slot/wertungsrichter-slot.component.html
@@ -1,20 +1,18 @@
-<ng-container *ngIf="einsatz !== undefined; else loading">
-  <div class="slot">
-    <mat-checkbox
-      [ngClass]="{
-        'label-green': einsatz.eingesetzt,
-        'label-red': !einsatz.eingesetzt
-      }"
-      [(ngModel)]="einsatz.eingesetzt"
-      [disabled]="canEdit()"
-      (ngModelChange)="userEingesetztgmodelchange($event)"
-      >{{ getSlotText() }}</mat-checkbox
-    >
+<div *ngIf="einsatz; else loading" class="slot">
+  <mat-checkbox
+    [ngClass]="{
+      'label-green': einsatz.eingesetzt,
+      'label-red': !einsatz.eingesetzt
+    }"
+    [(ngModel)]="einsatz.eingesetzt"
+    [disabled]="canEdit()"
+    (ngModelChange)="userEingesetztgmodelchange($event)"
+    >{{ getSlotText() }}</mat-checkbox
+  >
+</div>
+
+<ng-template #loading>
+  <div class="center">
+    <mat-spinner style="margin: 0 auto"></mat-spinner>
   </div>
-  <!--/ng-container-->
-  <ng-template #loading>
-    <div class="center">
-      <mat-spinner style="margin: 0 auto"></mat-spinner>
-    </div>
-  </ng-template>
-</ng-container>
+</ng-template>
