--- a/anmeldetool-web/src/main/web/src/app/verein/profile/role-form/role-chip/role-chip.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/profile/role-form/role-chip/role-chip.component.html
@@ -24,7 +24,7 @@
       }"
       [(ngModel)]="role.aktiv"
       [disabled]="!isVereinsVerantwortlicher"
-      (click)="aktivChange(role)"
+      (ngModelChange)="aktivChange(role)"
       >Rolle ist aktiviert</mat-checkbox
     >
   </ng-container>
