--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.css
@@ -23,6 +23,13 @@
   overflow: auto;
   max-height: 70vh;
 }
+.opacity_03 {
+  opacity: 0.3;
+}
+.opacity_10 {
+  opacity: 1;
+}
+
 .mat-row {
   min-height: 30px;
 }
