--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -95,7 +95,12 @@
           anlass.anlassBezeichnung + anlass.tiTu + anlass.tiefsteKategorie
         "
       >
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="kategorie">
+        <mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="kategorie"
+          [ngClass]="getStatusClass(anlass)"
+        >
           <div class="rotate">
             <span> {{ anlass.anlassBezeichnung.replace("%", "-") }}</span>
           </div>
