--- a/anmeldetool-web/src/main/web/src/styles.css
+++ b/anmeldetool-web/src/main/web/src/styles.css
@@ -3,6 +3,7 @@
   --ztv-blue: #488dd6;
   --ztv-white: #ffff;
   --ztv-black: rgba(0, 0, 0, 0.78);
+  --ztv-lighter-gray: rgba(220, 220, 220, 0.98);
   --ztv-light-gray: rgb(184, 184, 184);
   --ztv-gray: rgb(131, 128, 128);
   --ztv-light-red: rgba(253, 177, 177, 0.78);
