--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer.component.html
@@ -1,4 +1,8 @@
-<div class="container-fluid" *ngIf="isTeilnehmerLoaded | async; else loading">
+<!--div
+  class="container-fluid"
+  *ngIf="isTeilnehmerLoaded >= 0 | async; else loading"
+-->
+<div class="container-fluid">
   <h3 class="label">Teilnehmer {{ verein.name }}</h3>
 
   <mat-tab-group mat-align-tabs="start" #tabs>
