--- a/anmeldetool-web/src/main/web/src/app/verein/profile/profile.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/profile/profile.component.html
@@ -1,24 +1,30 @@
 <div class="container-fluid">
-  <h1 class="label">Vereinsadministration {{ verein.name }}</h1>
-  <mat-tab-group mat-align-tabs="start" #tabs>
-    <mat-tab
-      *ngFor="let user2 of vereinsUsers"
-      label="{{ user2.benutzername }}"
-    >
-      <app-user-form [currentUser]="user2"></app-user-form>
-    </mat-tab>
-  </mat-tab-group>
-  <div>
-    <button
-      mat-fab
-      color="primary"
-      #tooltip="matTooltip"
-      matTooltip="Neuen Benutzer anlegen"
-      matTooltipPosition="below"
-      matTooltipHideDelay="500"
-      (click)="addUser($event)"
-    >
-      Neu
-    </button>
+  <div class="row">
+    <div class="col-12">
+      <h1 class="label">Vereinsadministration {{ verein.name }}</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <mat-tab-group mat-align-tabs="start" #tabs>
+        <mat-tab
+          *ngFor="let user of vereinsUsers"
+          label="{{ user.benutzername }}"
+        >
+          <app-user-form [currentUser]="user"></app-user-form>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
   </div>
 </div>
+<button
+  mat-fab
+  color="primary"
+  #tooltip="matTooltip"
+  matTooltip="Neuen Benutzer anlegen"
+  matTooltipPosition="below"
+  matTooltipHideDelay="500"
+  (click)="addUser($event)"
+>
+  Neu
+</button>
