--- a/anmeldetool-web/src/main/web/src/app/verein/profile/user-form/user-form.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/profile/user-form/user-form.component.html
@@ -1,23 +1,48 @@
 <div class="container-fluid">
-  <!--form [formGroup]="form"-->
   <div class="row">
     <div class="col-6">
       <app-user
-      [readOnly]="!(isOwner() || isVereinsAnmelder || isVereinsVerantwortlicher)"
+        [modify]="true"
+        [readOnly]="
+          !(isOwner() || isVereinsAnmelder || isVereinsVerantwortlicher)
+        "
         [(user)]="user"
         [showPassword]="isOwner()"
         [showBenutzername]="true"
+        (valid)="updateUserValid($event)"
       ></app-user>
     </div>
     <div class="col-6">
-      <app-role [currentUser]="user" [isVereinsAnmelder]="isVereinsAnmelder" [isVereinsVerantwortlicher]="isVereinsVerantwortlicher" [(assignedRoles)]="assignedRoles"> </app-role>
-      <app-wertungsrichter *ngIf="isWertungsrichter()" [currentUser]="user" [(wertungsrichter)]="wertungsrichter" [isVereinsAnmelder]="isVereinsAnmelder" [isVereinsVerantwortlicher]="isVereinsVerantwortlicher"> </app-wertungsrichter>
+      <app-role
+        [currentUser]="user"
+        [isVereinsAnmelder]="isVereinsAnmelder"
+        [isVereinsVerantwortlicher]="isVereinsVerantwortlicher"
+        [(assignedRoles)]="assignedRoles"
+      >
+      </app-role>
+      <app-wertungsrichter
+        *ngIf="isWertungsrichter()"
+        [currentUser]="user"
+        [(wertungsrichter)]="wertungsrichter"
+        [isVereinsAnmelder]="isVereinsAnmelder"
+        [isVereinsVerantwortlicher]="isVereinsVerantwortlicher"
+      >
+      </app-wertungsrichter>
     </div>
   </div>
-  <button mat-button (click)="cancel()">Abbrechen</button>
+  <div class="row">
+    <div class="col-9"></div>
+    <div class="col-2">
+      <button mat-button (click)="cancel()">Abbrechen</button>
 
-  <button mat-button type="submit" [disabled]="!userValid && !userChanged && !rolesChanged && !wrChanged" (click)="save()">
-    Speichern
-  </button>
-  <!--/form-->
+      <button
+        mat-button
+        type="submit"
+        [disabled]="isSaveDisabled()"
+        (click)="save()"
+      >
+        Speichern
+      </button>
+    </div>
+  </div>
 </div>
