--- a/anmeldetool-web/src/main/web/src/app/verein/profile/wertungsrichter-form/wertungsrichter-form.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/profile/wertungsrichter-form/wertungsrichter-form.component.html
@@ -1,12 +1,13 @@
 <ng-container>
-  <div class = "container" [formGroup]="form">
-      <h1 class="label">Wertungsrichter</h1>
+  <div class="container" [formGroup]="form">
+    <h1 class="label">Wertungsrichter</h1>
     <p>
       <mat-label>Brevet</mat-label>
       <mat-radio-group
         aria-label="Wähle das Brevet"
         class="radio-group"
-        formControlName="brevetControl">
+        formControlName="brevetControl"
+      >
         <mat-radio-button class="radio-button" [value]="1"
           >Brevet 1</mat-radio-button
         >
@@ -15,18 +16,25 @@
         >
       </mat-radio-group>
     </p>
-    <p>
+    <!--p>
       <mat-form-field class="full-width" appearance="fill">
         <mat-label>letzter FK</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="letzterFkControl"/>
+        <input
+          matInput
+          [matDatepicker]="picker"
+          formControlName="letzterFkControl"
+        />
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
-    </p>
-    <div class="radio-group">
-      <mat-label [ngClass]="{
-        'label-green': wertungsrichter.gueltig,
-        'label-red': !wertungsrichter.gueltig
-      }">Brevet gültig</mat-label>
+    </p-->
+    <!--TODO div class="radio-group">
+      <mat-label
+        [ngClass]="{
+          'label-green': wertungsrichter.gueltig,
+          'label-red': !wertungsrichter.gueltig
+        }"
+        >Brevet gültig</mat-label
+      >
       <mat-checkbox
         [ngClass]="{
           'label-green': wertungsrichter.gueltig,
@@ -36,8 +44,9 @@
         [disabled]="true"
         >Brevet ist gültig</mat-checkbox
       >
-    </div>
-    <div class="radio-group">
+    </div-->
+    <!-- TODO bestätigung von WR-->
+    <!--div class="radio-group">
       <mat-label [ngClass]="{
         'label-green': wertungsrichter.gueltig,
         'label-red': !wertungsrichter.gueltig
@@ -51,6 +60,6 @@
         [disabled]="true"
         >Wertungsrichter hat bestätigt</mat-checkbox
       >
-    </div>
+    </div-->
   </div>
 </ng-container>
