--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -110,7 +110,7 @@
               (ngModelChange)="checkedClicked($event, colIndex)"
               [ngModel]="checked[colIndex]"
               [disabled]="isChangesDisabled(anlass)"
-              >Teilnahme
+              >Verein started
             </mat-checkbox>
           </div>
         </mat-header-cell>
